--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   mpflutter_wechat_editable: ^0.1.2
   html: ^0.15.5
   intl: ^0.20.2
+  get: ^4.7.2
   mpflutter_build_tools: ^2.8.0
   mpflutter_core: ^2.8.0
   mpflutter_wechat_api: ^2.2.4
