--- a/wechat/app.json
+++ b/wechat/app.json
@@ -5,5 +5,6 @@
     "navigationBarTitleText": "MyApp"
   },
   "style": "v2",
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  "darkmode": true
 }
