--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cookie_jar: ^4.0.8
+  crypto: ^3.0.6
   dio: ^5.8.0
   dio_cookie_manager: ^3.2.0
   encrypt: ^5.0.3
